[project]
authors = [{ name = "Kitware, Inc.", email = "kitware@kitware.com" }]
name = "zarr-checksum"
version = "0.4.3"
description = "Checksum support for zarrs stored in various backends"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
dependencies = ["click>=8.1.3", "tqdm>=4.64.1"]

[project.optional-dependencies]
boto = ["boto3>=1.24"]
zarr = ["zarr>=2.12,<3"]
test = ["pytest>=7.2.1"]
format = ["black>=23.3.0", "isort>=5.11.4"]
lint = [
    "flake8>=5.0.4",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=23.1.20",
    "flake8-docstrings>=1.7.0",
    "flake8-isort>=6.0.0",
    "flake8-quotes>=3.3.2",
    "pep8-naming>=0.13.3",
]
dev = [
    "flake8>=5.0.4",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=23.1.20",
    "flake8-docstrings>=1.7.0",
    "flake8-isort>=6.0.0",
    "flake8-quotes>=3.3.2",
    "pep8-naming>=0.13.3",
    "boto3-stubs>=1.24",
    "black>=23.3.0",
    "isort>=5.11.4",
]


[project.urls]
homepage = "https://github.com/dandi/zarr_checksum"
repository = "https://github.com/dandi/zarr_checksum"


[project.scripts]
zarrsum = "zarr_checksum.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# Providing these values here is deprecated, and is only duplicated here to support python versions 3.7 and 3.8
[tool.poetry]
package-mode = true
authors = ["Kitware, Inc. <kitware@kitware.com>"]
name = "zarr-checksum"
version = "0.4.2"
description = "Checksum support for zarrs stored in various backends"


[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist'

[tool.codespell]
skip = '.git,*.pdf,*.svg,poetry.lock'
#
# ignore-words-list = ''

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    # <https://github.com/zarr-developers/zarr-python/issues/1566>
    "zarr.*",
]
ignore_missing_imports = true
